2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>
	
	* WinUXThemeInfo.plist: Enable the GSScrollViewNoInnerBorder deafault
	to improve the look of scroll views.

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSColorWell.m: Add color well themeing
	* WinNSProgressIndicator.m: Don't try to use clip rect (incorrectly)
	
2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSButton.m: Refactor and tidy up code, and add support
	for disabled buttons.

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSProgressIndicator.m: Add progress indicator themeing

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSStepper.m: Add stepper themeing

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSTableHeader: Add table header themeing

2010-04-14 01:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Don't attempt to set file types if not specified.

2010-04-11 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSOpenPanel.m: Add forgotten -directory methods

2010-04-05 05:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Native Save and Open Sheets, Folder Picker when appropriate

2010-03-17 01:57-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Add WinNSOpenPanel.m to list of files.
	* WinNSMenu.m: Expand font size for wraparound calculation.
	* WinNSOpenPanel.m: Use native panels for open and save panels.

2010-03-05 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m: Improve display of keyEquivalent modifiers,
	including Shift.

2010-02-24 22:12-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinUXTheme.m: Change color of selected menu text.  Previously
	it was white on almost white which was unreadable.

2010-02-24 16:00-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Resources/ThemeImages/common_TabDownUnSelectedLeft.tif
	* Resources/ThemeImages/common_TabDownUnSelectedRight.tif